--- a/WebshopFrontend/Components/App.razor
+++ b/WebshopFrontend/Components/App.razor
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
     <link rel="stylesheet" href="@Assets["app.css"]" />
-    <link rel="stylesheet" href="@Assets["WebshopFrontend.styles.css"]" />
+    @* <link rel="stylesheet" href="@Assets["WebshopFrontend.styles.css"]" /> *@
     <ImportMap />
     <HeadOutlet />
 </head>
 
-<body>
-    <Routes />
+<body class ="content">
+    <Routes @rendermode="InteractiveServer"/>
     <script src="_framework/blazor.web.js"></script>
 </body>
 
