--- a/WebshopFrontend/Components/_Imports.razor
+++ b/WebshopFrontend/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using WebshopFrontend
 @using WebshopFrontend.Components
+@using WebshopShared
+@using WebshopShared.Models
