--- a/WebshopFrontend/wwwroot/app.css
+++ b/WebshopFrontend/wwwroot/app.css
@@ -9,8 +9,13 @@ html {
     line-height: 1.5;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
 .content {
-    margin: 0;
     margin-left: auto;
     margin-right: auto;
     max-width: 1200px;
@@ -57,6 +62,24 @@ html {
 
 .text-xlarge {
     font-size: 24px;
+}
+
+.text-bold {
+    font-weight: bold;
+}
+
+.text-center {
+    text-align: center;
+}
+.text-left {
+    text-align: left;
+}
+.text-right {
+    text-align: right;
+}
+
+.container {
+    padding: 0.01em 16px;
 }
 
 .nav-menu {
@@ -144,6 +167,37 @@ html {
     cursor: pointer;
 }
 
+.product-flex-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.product-flex-item {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%;
+    max-width: 50%;
+}
+
+.product-preview-top {
+    
+}
+.product-preview-bottom {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+
+
+
+@media (min-width: 768px) {
+    .product-flex-item {
+        flex-basis: 33.333%;
+        max-width: 33.333%;
+    }
+}
 
 @media (min-width: 993px) {
     .sidebar {
@@ -157,4 +211,14 @@ html {
     .topbar {
         display: none;
     }
+    .product-flex-item {
+        flex-basis: 25%;
+        max-width: 25%;
+    }
 }
+
+@media (min-width: 1200px) {
+   
+}
+
+
