--- a/WebshopFrontend/Components/App.razor
+++ b/WebshopFrontend/Components/App.razor
@@ -14,6 +14,7 @@
 <body class ="content">
     <Routes @rendermode="InteractiveServer"/>
     <script src="_framework/blazor.web.js"></script>
+    <script src="@Assets["app.js"]"></script>
 </body>
 
 </html>
