--- a/WebshopFrontend/Components/Pages/Products.razor
+++ b/WebshopFrontend/Components/Pages/Products.razor
@@ -30,6 +30,7 @@
                 Name = "Catan",
                 Publisher = "Kosmos",
                 Price = 399,
+                DiscountedPrice = 299,
                 MinPlayers = 3,
                 MaxPlayers = 4,
                 PlayTime = 120,
