--- a/WebshopFrontend/wwwroot/app.css
+++ b/WebshopFrontend/wwwroot/app.css
@@ -31,6 +31,14 @@ img {
     color: white;
 }
 
+.red {
+    color: red;
+}
+
+.hide-element {
+    display: none;
+}
+
 .padding-64 {
     padding-bottom: 64px;
     padding-top: 64px;
@@ -68,6 +76,10 @@ img {
     font-weight: bold;
 }
 
+.text-crossed {
+    text-decoration: line-through;
+}
+
 .text-center {
     text-align: center;
 }
@@ -81,6 +93,43 @@ img {
 .container {
     padding: 0.01em 16px;
 }
+
+.active {
+    color: black;
+}
+
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
+}
+
+.button-block {
+    width: 100%;
+    display: block;
+    cursor: pointer;
+    text-decoration: none;
+    border-radius: 2px;
+}
+    
+.button-buy {
+    background-color: rgb(76, 180, 76);
+    color: white;
+}
+    .button-buy:hover {
+        background-color: rgb(56, 160, 56);
+    }
+
+.button-reserve {
+    background-color: rgb(255, 165, 0);
+    color: white;
+}
+
+    .button-reserve:hover {
+        background-color: rgb(255, 145, 0);
+    }
 
 .nav-menu {
     display: block;
@@ -141,18 +190,6 @@ img {
     overflow: hidden;
 }
 
-.active {
-    color: black;
-}
-
-.right {
-    float: right;
-}
-
-.left {
-    float: left;
-}
-
 .overlay {
     position: fixed;
     display: none;
@@ -189,7 +226,32 @@ img {
     justify-content: space-between;
 }
 
+.cart {
+    width: 40px;
+    height: auto;
+}
+.cart img {
+    object-fit: contain;
+}
 
+.badge {
+    width: 25px;
+    height: 25px;
+    font-size: 15px;
+    color: #fff;
+    background: black;
+    border-radius: 50%;
+    padding: 0 5px;
+    position: relative;
+    left: 13px;
+    top: -35px;
+    opacity: 0.9;
+}
+    .badge span {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+    }
 
 
 @media (min-width: 768px) {
