--- a/WebshopFrontend/Components/Components/AddToCartButton.razor
+++ b/WebshopFrontend/Components/Components/AddToCartButton.razor
@@ -18,7 +18,7 @@ else
 
 
 @code {
-    [Parameter] public IProduct Product { get; set; }
+    [Parameter] public Product Product { get; set; }
 
     private async Task AddToCart()
     {
