--- a/WebshopFrontend/Components/App.razor
+++ b/WebshopFrontend/Components/App.razor
@@ -5,7 +5,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <link rel="stylesheet" href="@Assets["app.css"]" />
+    @* <link rel="stylesheet" href="@Assets["app.css"]" /> *@
+    <link rel="stylesheet" href="@Assets["css/reset.css"]" />
+    <link rel="stylesheet" href="@Assets["css/elements.css"]" />
+    <link rel="stylesheet" href="@Assets["css/general.css"]" />
+    <link rel="stylesheet" href="@Assets["css/specific.css"]" />
+    <link rel="stylesheet" href="@Assets["css/responsive.css"]" />
     @* <link rel="stylesheet" href="@Assets["WebshopFrontend.styles.css"]" /> *@
     <ImportMap />
     <HeadOutlet />
