--- a/WebshopFrontend/Components/Layout/TopMenu.razor
+++ b/WebshopFrontend/Components/Layout/TopMenu.razor
@@ -1,8 +1,8 @@
 ﻿@rendermode InteractiveServer
-<div class="left text-xlarge padding">
+<div class="left text-xlarge padding-y padding-x">
     LOGO
 </div>
-<a class="right top-menu-nav-item padding" @onclick="OnShowSidebar">|||</a>
+<a class="right top-menu-nav-item padding-y" @onclick="OnShowSidebar">|||</a>
 
 
 @code {
