--- a/WebshopFrontend/Components/Layout/NavMenu.razor
+++ b/WebshopFrontend/Components/Layout/NavMenu.razor
@@ -7,21 +7,21 @@
     </div> 
 }
 
-<div class="text-xlarge padding">
+<div class="text-xlarge padding-y padding-x">
     LOGO
 </div>
 
-<div class="nav-menu text-gray padding text-large">
-
-    <NavLink class="nav-item" href="checkout">Checkout</NavLink>
-    <NavLink class="nav-item" href="products">Products</NavLink>
-    <NavLink class="nav-item" href="newuser">New User</NavLink>
-    <NavLink class="nav-item" href="profile">Profile</NavLink>
-
+<div class="padding-y padding-x">
+    <CartIcon></CartIcon>
 </div>
 
-<div>
-    <CartIcon></CartIcon>
+<div class="nav-menu text-gray padding-y text-large">
+    
+    <NavLink class="nav-item padding-x padding-y" href="checkout">Checkout</NavLink>
+    <NavLink class="nav-item padding-x padding-y" href="products">Products</NavLink>
+    <NavLink class="nav-item padding-x padding-y" href="newuser">New User</NavLink>
+    <NavLink class="nav-item padding-x padding-y" href="profile">Profile</NavLink>
+
 </div>
 
 @code {
