--- a/WebshopFrontend/wwwroot/css/specific.css
+++ b/WebshopFrontend/wwwroot/css/specific.css
@@ -1,110 +1,7 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-}
-
-html {
-    font-family: Verdana,sans-serif;
-    font-size: 15px;
-    line-height: 1.5;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    object-fit: contain;
-}
-
-.content {
+﻿.content {
     margin-left: auto;
     margin-right: auto;
     max-width: 1200px;
-}
-
-.white {
-    background-color: white;
-    color: black;
-}
-
-.black {
-    background-color: black;
-    color: white;
-}
-
-.red {
-    color: red;
-}
-
-.hide-element {
-    display: none;
-}
-
-.padding-64 {
-    padding-bottom: 64px;
-    padding-top: 64px;
-}
-
-.padding-16 {
-    padding-top: 16px;
-    padding-bottom: 16px;
-}
-
-.padding {
-    padding-top: 8px;
-    padding-right: 16px;
-    padding-bottom: 8px;
-    padding-left: 16px;
-}
-
-.text-gray {
-    color: gray;
-}
-
-.text-large {
-    font-size: 18px;
-}
-
-.text-small {
-    font-size: 12px;
-}
-
-.text-xlarge {
-    font-size: 24px;
-}
-
-.text-bold {
-    font-weight: bold;
-}
-
-.text-crossed {
-    text-decoration: line-through;
-}
-
-.text-center {
-    text-align: center;
-}
-.text-left {
-    text-align: left;
-}
-.text-right {
-    text-align: right;
-}
-
-.container {
-    padding: 0.01em 16px;
-}
-
-.active {
-    color: black;
-}
-
-.right {
-    float: right;
-}
-
-.left {
-    float: left;
 }
 
 .button-block {
@@ -114,11 +11,12 @@ img {
     text-decoration: none;
     border-radius: 2px;
 }
-    
+
 .button-buy {
     background-color: rgb(76, 180, 76);
     color: white;
 }
+
     .button-buy:hover {
         background-color: rgb(56, 160, 56);
     }
@@ -139,7 +37,6 @@ img {
 .nav-item {
     width: 100%;
     display: block;
-    padding: 8px 16px;
     text-align: left;
     cursor: pointer;
     background-color: inherit;
@@ -157,7 +54,6 @@ img {
     background-color: inherit;
     color: inherit;
     text-decoration: none;
-    padding: 8px 16px;
     text-align: left;
 }
 
@@ -219,23 +115,22 @@ img {
 }
 
 .product-preview-top {
-    
 }
+
 .product-preview-bottom {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-
-
 .cart {
     width: 40px;
     height: auto;
 }
-.cart img {
-    object-fit: contain;
-}
+
+    .cart img {
+        object-fit: contain;
+    }
 
 .badge {
     width: 25px;
@@ -250,40 +145,9 @@ img {
     top: -35px;
     opacity: 0.9;
 }
+
     .badge span {
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
     }
-
-
-@media (min-width: 768px) {
-    .product-flex-item {
-        flex-basis: 33.333%;
-        max-width: 33.333%;
-    }
-}
-
-@media (min-width: 993px) {
-    .sidebar {
-        display: block;
-    }
-
-    .main {
-        margin-left: 250px;
-    }
-
-    .topbar {
-        display: none;
-    }
-    
-}
-
-@media (min-width: 1200px) {
-    .product-flex-item {
-        flex-basis: 25%;
-        max-width: 25%;
-    }
-}
-
-
