--- a/WebshopFrontend/Components/Components/ProductPreview.razor
+++ b/WebshopFrontend/Components/Components/ProductPreview.razor
@@ -1,8 +1,8 @@
 ﻿@rendermode InteractiveServer
 
-<div class="container product-flex-item">
+<div class="product-flex-item white padding-y-16 padding-x-16">
 
-    <div class="product-preview-top padding-y-16">
+    <div class="product-preview-top">
         <img src="@Boardgame.Image.ImageSmallUrl" alt="@Boardgame.Image.ImageText"/>
         <span>@Boardgame.Name</span>
     </div>
