--- a/WebshopFrontend/Components/Layout/MainLayout.razor
+++ b/WebshopFrontend/Components/Layout/MainLayout.razor
@@ -1,19 +1,34 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="topbar black text-xlarge padding-x-16">
-    <TopMenu OnShowSidebar="ShowSidebar"></TopMenu>
-</div>
+<div class="root">
+    <header>
+        <div class="black top-bar">
+        </div>
+        <div class="white middle-top-bar">
+            <div class="content">
+                <TopMenu OnShowSidebar="ShowSidebar"></TopMenu>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="content flex-row">
+            <div class="sidebar white padding-x-16" style="@DisplayStyle">
+                <NavMenu SideBarShown="@_sideBarShown" OnHideSideBar="ShowSidebar"></NavMenu>
+            </div>
 
-<div class="sidebar white padding-x-16" style="@DisplayStyle">
-    <NavMenu SideBarShown="@_sideBarShown" OnHideSideBar="ShowSidebar"></NavMenu>
-</div>
+            <div class="main padding-x">
+                @Body
+            </div>
 
-<div class="overlay" style="@DisplayStyle" @onclick="ShowSidebar">
+            <div class="overlay" style="@DisplayStyle" @onclick="ShowSidebar">
+            </div>
+        </div>
+    </main>
 
-</div>
-
-<div class="main">
-    @Body
+    <footer>
+        <div class="content">
+        </div>
+    </footer>
 </div>
 
 @code {
