--- a/WebshopFrontend/Components/App.razor
+++ b/WebshopFrontend/Components/App.razor
@@ -11,12 +11,13 @@
     <link rel="stylesheet" href="@Assets["css/general.css"]" />
     <link rel="stylesheet" href="@Assets["css/specific.css"]" />
     <link rel="stylesheet" href="@Assets["css/responsive.css"]" />
+    <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
     @* <link rel="stylesheet" href="@Assets["WebshopFrontend.styles.css"]" /> *@
     <ImportMap />
     <HeadOutlet />
 </head>
 
-<body class ="content">
+<body>
     <Routes @rendermode="InteractiveServer"/>
     <script src="_framework/blazor.web.js"></script>
     <script src="@Assets["app.js"]"></script>
