--- a/WebshopFrontend/wwwroot/css/specific.css
+++ b/WebshopFrontend/wwwroot/css/specific.css
@@ -1,7 +1,20 @@
-﻿.content {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1200px;
+﻿.badge:after {
+    content: attr(value);
+    font-size: 16px;
+    color: white;
+    background: red;
+    border-radius: 20%;
+    padding: 5px 5px;
+    position: relative;
+    left: -60px;
+    top: -5px;
+    opacity: 0.9;
+}
+
+.badge span {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .button-block {
@@ -30,6 +43,39 @@
         background-color: rgb(255, 145, 0);
     }
 
+.cart {
+    width: 40px;
+    height: auto;
+}
+
+.content {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1200px;
+    padding-left: 8px;
+    padding-right: 8px;
+    width: 100%;
+}
+
+.cart img {
+    object-fit: contain;
+}
+
+
+.main {
+    margin-left: 0;
+    transition: margin-left .4s;
+    width: auto;
+}
+
+.middle-top-bar {
+    border-top: 1px solid #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+
 .nav-menu {
     display: block;
 }
@@ -48,44 +94,6 @@
         background-color: gray;
         color: black;
     }
-
-.top-menu-nav-item {
-    cursor: pointer;
-    background-color: inherit;
-    color: inherit;
-    text-decoration: none;
-    text-align: left;
-}
-
-    .top-menu-nav-item:hover {
-        background-color: gray;
-        color: black;
-    }
-
-
-.main {
-    margin-left: 0;
-    transition: margin-left .4s;
-}
-
-.sidebar {
-    width: 250px;
-    height: 100%;
-    z-index: 3;
-    position: fixed;
-    display: none;
-    overflow: auto;
-    top: 0;
-}
-
-.topbar {
-    display: block;
-    top: 0;
-    position: sticky;
-    width: 100%;
-    z-index: 1;
-    overflow: hidden;
-}
 
 .overlay {
     position: fixed;
@@ -112,9 +120,7 @@
     flex-direction: column;
     flex-basis: 50%;
     max-width: 50%;
-}
-
-.product-preview-top {
+    border: 1px solid #ededed;
 }
 
 .product-preview-bottom {
@@ -122,35 +128,6 @@
     flex-direction: row;
     justify-content: space-between;
 }
-
-.cart {
-    width: 40px;
-    height: auto;
-}
-
-    .cart img {
-        object-fit: contain;
-    }
-
-.badge {
-    width: 25px;
-    height: 25px;
-    font-size: 15px;
-    color: #fff;
-    background: black;
-    border-radius: 50%;
-    padding: 0 5px;
-    position: relative;
-    left: 13px;
-    top: -35px;
-    opacity: 0.9;
-}
-
-    .badge span {
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-    }
 
 .product-grid-container {
     display: grid;
@@ -187,3 +164,65 @@
 .product-grid-item-6 {
     grid-area: Stock;
 }
+
+.root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+}
+
+.sidebar {
+    width: 250px;
+    height: 100%;
+    display: none;
+    overflow: auto;
+    position: sticky;
+    flex-shrink: 0;
+    z-index: 3;
+    top: 0;
+    border: 1px solid #ededed;
+}
+
+.top-bar {
+    height: 32px;
+}
+
+.top-menu {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+.top-menu-search {
+    flex-grow: 1;
+    position: relative;
+}
+
+.top-menu-menu {
+    display: flex;
+    align-items: center;
+}
+    .top-menu-menu img {
+        width: 25px;
+        height: 25px;
+    }
+
+.top-menu-cart {
+}
+
+.top-menu-logo {
+}
+
+.top-menu-nav-item {
+    cursor: pointer;
+    background-color: inherit;
+    color: inherit;
+    text-decoration: none;
+    text-align: left;
+}
+
+    .top-menu-nav-item:hover {
+        background-color: gray;
+        color: black;
+    }
