--- a/WebshopFrontend/Components/Layout/MainLayout.razor
+++ b/WebshopFrontend/Components/Layout/MainLayout.razor
@@ -12,7 +12,7 @@
     </header>
     <main>
         <div class="content flex-row">
-            <div class="sidebar white padding-x-16" style="@DisplayStyle">
+            <div class="sidebar white" style="@DisplayStyle">
                 <NavMenu SideBarShown="@_sideBarShown" OnHideSideBar="ShowSidebar"></NavMenu>
             </div>
 
