--- a/WebshopFrontend/Components/Layout/TopMenu.razor
+++ b/WebshopFrontend/Components/Layout/TopMenu.razor
@@ -17,7 +17,7 @@
     <div class="top-menu-menu padding-x">
         <a @onclick="OnShowSidebar">
             <div>
-                <img src="Icons\menu-symbol-of-three-parallel-lines-svgrepo-com - Copy.svg" alt="Menu" />
+                <i class="fa fa-bars" aria-hidden="true"></i>
             </div>
         </a>
     </div>
