--- a/WebshopFrontend/wwwroot/css/specific.css
+++ b/WebshopFrontend/wwwroot/css/specific.css
@@ -1,14 +1,17 @@
-﻿.badge:after {
+﻿.active {
+    color: black;
+}
+
+.badge:after {
     content: attr(value);
-    font-size: 16px;
+    font-size: 14px;
     color: white;
-    background: red;
-    border-radius: 20%;
-    padding: 5px 5px;
+    background: gray;
+    border-radius: 10%;
+    padding: 3px 3px;
     position: relative;
-    left: -60px;
-    top: -5px;
-    opacity: 0.9;
+    left: -50px;
+    top: -4px;
 }
 
 .badge span {
@@ -43,9 +46,9 @@
         background-color: rgb(255, 145, 0);
     }
 
-.cart {
-    width: 40px;
-    height: auto;
+.cart:hover {
+    background-color: rgb(212, 212, 212);
+    color: black;
 }
 
 .content {
@@ -56,11 +59,6 @@
     padding-right: 8px;
     width: 100%;
 }
-
-.cart img {
-    object-fit: contain;
-}
-
 
 .main {
     margin-left: 0;
@@ -78,22 +76,31 @@
 
 .nav-menu {
     display: block;
+    overflow: hidden;
 }
 
 .nav-item {
-    width: 100%;
-    display: block;
-    text-align: left;
+    width: 250px;
+    height: 45px;
+    display: flex;
+    align-items: center;
     cursor: pointer;
-    background-color: inherit;
-    color: inherit;
-    text-decoration: none;
+    border: 1px solid #ededed;
 }
 
+    .nav-item a {
+        background: inherit;
+        color: inherit;
+    }
+
     .nav-item:hover {
-        background-color: gray;
+        background-color: rgb(212, 212, 212);
         color: black;
     }
+
+.nav-menu-icon {
+    width: 37px;
+}
 
 .overlay {
     position: fixed;
@@ -176,10 +183,10 @@
     height: 100%;
     display: none;
     overflow: auto;
-    position: sticky;
+    position: fixed;
     flex-shrink: 0;
     z-index: 3;
-    top: 0;
+    top: 81px;
     border: 1px solid #ededed;
 }
 
@@ -203,6 +210,7 @@
     display: flex;
     align-items: center;
 }
+
     .top-menu-menu img {
         width: 25px;
         height: 25px;
