Product page done

--- a/WebshopFrontend/Components/Components/AddToCartButton.razor
+++ b/WebshopFrontend/Components/Components/AddToCartButton.razor
@@ -3,19 +3,20 @@
 @inject IJSRuntime Js
 @inject NotifyCartUpdated NotifyCartUpdated
 
-@if (Boardgame.Stock.Quantity > 0)
-{
-<a @onclick="AddToCart" class="text-center text-xlarge text-bold button-buy button-block">
-    Buy
-</a>
-}
-else
-{
-<a class="text-center text-xlarge text-bold button-reserve button-block">
-    Reserve
-</a>
-}
-
+<div>
+    @if (Boardgame.Stock.Quantity > 0)
+    {
+        <a @onclick="AddToCart" class="text-center text-xlarge text-bold button-buy button-block">
+            Buy
+        </a>
+    }
+    else
+    {
+        <a class="text-center text-xlarge text-bold button-reserve button-block">
+            Reserve
+        </a>
+    }
+</div>
 
 @code {
     [Parameter] public required BoardgameDto Boardgame { get; set; }
