--- a/WebshopFrontend/Components/Pages/Product.razor
+++ b/WebshopFrontend/Components/Pages/Product.razor
@@ -11,30 +11,54 @@ else
 {
     <div class="product-grid-container">
 
-        <div class="product-grid-item-1">
+        <div class="product-grid-item-1 padding-x padding-y">
             <h1>@_boardgame.Name</h1>
             <span>@_boardgame.ArtNr</span>
-            <p>@_boardgame.Publisher.Name</p>
+            <span>@_boardgame.Publisher.Name</span>
         </div>
 
-        <div class="product-grid-item-2">
+        <div class="product-grid-item-2 padding-x padding-y">
             <img src="@_boardgame.Image.ImageMediumUrl" alt="@_boardgame.Image.ImageText"/>
         </div>
 
-        <div class="product-grid-item-3">
-            <span>@_boardgame.Price.Regular</span>
-        </div>
+        <div class="product-grid-item-3 padding-x padding-y">
+            @if (_boardgame.Price.Discount != null)
+            {
+                <div>
+                    <h3>Special Offer</h3>
+                    <span>From: @_boardgame.Price.Discount.StartDate.ToShortDateString()</span><br/>
+                    <span>To: @_boardgame.Price.Discount.EndDate.ToShortDateString()</span>
+                </div>
+            }
+            <div>
+                <Price RegularPrice="@_boardgame.Price.Regular" DiscountedPrice="@_boardgame.Price.Discount?.Price" FontSizePx="40"></Price>
+            </div>
 
-        <div class="product-grid-item-4">
-            <p>@_boardgame.BoardgameDetails.Description</p>
-        </div>
-
-        <div class="product-grid-item-5">
             <AddToCartButton Boardgame="_boardgame"></AddToCartButton>
         </div>
 
-        <div class="product-grid-item-6">
-            <span>@_boardgame.Stock.Quantity</span>
+        <div class="product-grid-item-4 padding-x padding-y">
+            <GameProperties Boardgame="_boardgame"></GameProperties>
+            <p>@_boardgame.BoardgameDetails.Description</p>
+        </div>
+
+        <div class="product-grid-item-6 padding-x padding-y">
+            <span>Stock: @_boardgame.Stock.Quantity</span>
+            @if (_boardgame.Stock.NextRestock == null)
+            {
+                <div>
+                    <span>Next restock: N/A</span>
+                </div>
+            }
+            else
+            {
+                <div>
+                    <span>Next restock: @_boardgame.Stock.NextRestock.RestockDate.ToShortDateString()</span>
+                    <br />
+                    <span>Quantity: @_boardgame.Stock.NextRestock.Quantity</span>
+                </div>
+            }
+            
         </div>
     </div>
 }
