--- a/WebshopFrontend/Components/Components/GameProperties.razor
+++ b/WebshopFrontend/Components/Components/GameProperties.razor
@@ -1,8 +1,8 @@
 ﻿
-<div class="game-properties padding-y-32">
+<div class="game-properties padding-y">
     <div>
         <i class="fa fa-users" aria-hidden="true"></i>
-        <span>@Boardgame.BoardgameDetails.MinPlayers - @Boardgame.BoardgameDetails.MaxPlayers</span>
+        <span>@Boardgame.BoardgameDetails.MinPlayers - @Boardgame.BoardgameDetails.MaxPlayers Players</span>
     </div>
     <div>
         <i class="fa fa-clock" aria-hidden="true"></i>
@@ -10,7 +10,7 @@
     </div>
     <div>
         <i class="fa fa-id-card" aria-hidden="true"></i>
-        <span>From @Boardgame.BoardgameDetails.MinAge yr</span>
+        <span>From @Boardgame.BoardgameDetails.MinAge years old</span>
     </div>
 </div>
 
