--- a/WebshopFrontend/Components/Layout/TopMenu.razor
+++ b/WebshopFrontend/Components/Layout/TopMenu.razor
@@ -14,7 +14,7 @@
         <CartIcon></CartIcon>
     </div>
 
-    <div class="top-menu-menu padding-x">
+    <div class="top-menu-menu text-gray padding-x">
         <a @onclick="OnShowSidebar">
             <div>
                 <i class="fa fa-bars" aria-hidden="true"></i>
