--- a/WebshopFrontend/wwwroot/css/responsive.css
+++ b/WebshopFrontend/wwwroot/css/responsive.css
@@ -3,6 +3,17 @@
         flex-basis: 33.333%;
         max-width: 33.333%;
     }
+
+    .product-grid-container {
+        grid-template-areas:
+            "product product"
+            "image price"
+            "image price"
+            "description stock"
+            "description stock";
+        grid-template-columns: 8fr minmax(200px, 6fr);
+        grid-template-rows: 80px auto auto auto auto;
+    }
 }
 
 @media (min-width: 993px) {
@@ -18,6 +29,14 @@
     header {
         position: static;
     }
+
+    .overlay {
+        padding-left: 200px;
+    }
+    .overlay img {
+        width: 80%;
+        
+    }
 }
 
 @media (min-width: 1200px) {
@@ -25,4 +44,5 @@
         flex-basis: 25%;
         max-width: 25%;
     }
+    
 }
