--- a/WebshopFrontend/wwwroot/css/specific.css
+++ b/WebshopFrontend/wwwroot/css/specific.css
@@ -46,6 +46,10 @@
         background-color: rgb(255, 145, 0);
     }
 
+.cart {
+    transition: 0.2s;
+}
+
 .cart:hover {
     background-color: rgb(212, 212, 212);
     color: black;
@@ -69,7 +73,7 @@
 .main {
     margin-left: 0;
     transition: margin-left .4s;
-    width: auto;
+    width: 100%;
 }
 
 .middle-top-bar {
@@ -85,6 +89,8 @@
     overflow: hidden;
 }
 
+
+
 .nav-item {
     width: 250px;
     height: 45px;
@@ -92,6 +98,7 @@
     align-items: center;
     cursor: pointer;
     border: 1px solid #ededed;
+    transition: 0.1s;
 }
 
     .nav-item a {
@@ -108,9 +115,29 @@
     width: 37px;
 }
 
+.nav-menu-close {
+    display: flex;
+    justify-content: end;
+}
+
+.nav-menu-close-button {
+    color: gray;
+    font-size: 30px;
+    font-weight: bold;
+    transition: 0.1s;
+    align-self: end;
+}
+
+    .nav-menu-close-button:hover {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
 .overlay {
     position: fixed;
     display: none;
+    padding-top: 135px;
     width: 100%;
     height: 100%;
     top: 0;
@@ -118,9 +145,33 @@
     right: 0;
     bottom: 0;
     background-color: rgba(0,0,0,0.5);
-    z-index: 2;
+    z-index: 1;
     cursor: pointer;
 }
+
+    .overlay img {
+        margin: auto;
+        width: 100%;
+        max-width: 700px;
+    }
+
+.overlay-close-button {
+    position: absolute;
+    top: 85px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+    .overlay-close-button:hover,
+    .overlay-close-button:focus {
+        color: #bbb;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
 
 .product-flex-container {
     display: flex;
@@ -146,18 +197,17 @@
     width: 100%;
     display: grid;
     grid-template-areas:
-        "product product"
-        "image price"
-        "image price"
-        "description stock"
-        "description stock";
-    grid-template-columns: 8fr minmax(200px, 6fr);
+        "product"
+        "image"
+        "description"
+        "price"
+        "stock";
+    grid-template-columns: auto;
     grid-template-rows: 80px auto auto auto auto;
     border: 1px solid #ededed;
 }
 
 [class^="product-grid-item"] {
-    
     background: white;
 }
 
@@ -178,6 +228,9 @@
 
 .product-grid-item-4 {
     grid-area: description;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
 }
 
 .product-grid-item-6 {
@@ -196,7 +249,6 @@
 
 .sidebar {
     width: 250px;
-    height: 100%;
     display: none;
     overflow: auto;
     position: fixed;
@@ -225,12 +277,17 @@
 .top-menu-menu {
     display: flex;
     align-items: center;
+    transition: 0.1s
 }
 
     .top-menu-menu img {
         width: 25px;
         height: 25px;
     }
+.top-menu-menu:hover {
+    color: black;
+}
+
 
 .top-menu-nav-item {
     cursor: pointer;
